RESOLVED FIXED 206225
REGRESSION (r254483): media/track/track-cues-sorted-before-dispatch.html became very flaky
https://bugs.webkit.org/show_bug.cgi?id=206225
Summary REGRESSION (r254483): media/track/track-cues-sorted-before-dispatch.html beca...
WebKit Commit Bot
Reported 2020-01-14 04:43:02 PST
This is an automatically generated bug from the commit-queue. media/track/track-cues-sorted-before-dispatch.html has been flaky on the commit-queue. media/track/track-cues-sorted-before-dispatch.html was authored by simon.pena@samsung.com and vcarbune@chromium.org. https://trac.webkit.org/browser/trunk/LayoutTests/media/track/track-cues-sorted-before-dispatch.html The commit-queue just saw media/track/track-cues-sorted-before-dispatch.html flake (text diff) while processing attachment 387642 [details] on bug 206127. Bot: webkit-cq-03 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6 The bots will update this with information from each new failure. If you believe this bug to be fixed or invalid, feel free to close. The bots will re-open if the flake re-occurs. If you would like to track this test fix with another bug, please close this bug as a duplicate. The bots will follow the duplicate chain when making future comments.
Attachments
Archive of layout-test-results from webkit-cq-03 (3.15 MB, application/zip)
2020-01-14 04:43 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (3.13 MB, application/zip)
2020-01-14 16:14 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (3.15 MB, application/zip)
2020-01-15 03:12 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (3.15 MB, application/zip)
2020-01-15 11:44 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (3.25 MB, application/zip)
2020-01-15 12:32 PST, WebKit Commit Bot
no flags
Archive of layout-test-results from webkit-cq-01 (3.16 MB, application/zip)
2020-01-16 11:10 PST, WebKit Commit Bot
no flags
Patch (8.71 KB, patch)
2020-01-17 11:57 PST, Eric Carlson
no flags
Patch for landing (9.17 KB, patch)
2020-01-17 12:44 PST, Eric Carlson
no flags
WebKit Commit Bot
Comment 1 2020-01-14 04:43:04 PST
Created attachment 387644 [details] Archive of layout-test-results from webkit-cq-03
WebKit Commit Bot
Comment 2 2020-01-14 16:14:46 PST
The commit-queue just saw media/track/track-cues-sorted-before-dispatch.html flake (text diff) while processing attachment 387699 [details] on bug 206255. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 3 2020-01-14 16:14:47 PST
Created attachment 387720 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 4 2020-01-15 03:12:19 PST
The commit-queue just saw media/track/track-cues-sorted-before-dispatch.html flake (text diff) while processing attachment 387767 [details] on bug 206175. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 5 2020-01-15 03:12:20 PST
Created attachment 387770 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 6 2020-01-15 11:43:59 PST
The commit-queue just saw media/track/track-cues-sorted-before-dispatch.html flake (text diff) while processing attachment 387791 [details] on bug 206288. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 7 2020-01-15 11:44:00 PST
Created attachment 387814 [details] Archive of layout-test-results from webkit-cq-01
WebKit Commit Bot
Comment 8 2020-01-15 12:32:33 PST
The commit-queue just saw media/track/track-cues-sorted-before-dispatch.html flake (text diff) while processing attachment 387655 [details] on bug 206233. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 9 2020-01-15 12:32:35 PST
Created attachment 387820 [details] Archive of layout-test-results from webkit-cq-01
Alexey Proskuryakov
Comment 10 2020-01-15 22:30:03 PST
Alexey Proskuryakov
Comment 11 2020-01-15 22:30:27 PST
Radar WebKit Bug Importer
Comment 12 2020-01-15 22:30:40 PST
WebKit Commit Bot
Comment 13 2020-01-16 11:10:43 PST
The commit-queue just saw media/track/track-cues-sorted-before-dispatch.html flake (text diff) while processing attachment 387839 [details] on bug 206313. Bot: webkit-cq-01 Port: <class 'webkitpy.common.config.ports.MacPort'> Platform: Mac OS X 10.14.6
WebKit Commit Bot
Comment 14 2020-01-16 11:10:44 PST
Created attachment 387933 [details] Archive of layout-test-results from webkit-cq-01
Darin Adler
Comment 15 2020-01-16 12:34:13 PST
I guess this flakiness is my fault, but not sure why.
Eric Carlson
Comment 16 2020-01-17 11:48:43 PST
(In reply to Darin Adler from comment #15) > I guess this flakiness is my fault, but not sure why. The test has always been flaky, your changes just make it flake more often. The test sometimes fails because TextTrackCue::isOrderedBefore only considers cue start and end time, so two cues with the same start time and duration will sort differently depending on their position in the red-black tree. The spec originally said to compare cues this way, but it later changed so cues in the same track with identical start/end times should sort by their order they were added to the track.
Eric Carlson
Comment 17 2020-01-17 11:57:01 PST
Jer Noble
Comment 18 2020-01-17 12:30:21 PST
Comment on attachment 388072 [details] Patch LGTM; I think I understand what this change is doing. But please add some more comments to the changelog explaining what the problem was before and why this particular change was necessary.
Eric Carlson
Comment 19 2020-01-17 12:44:47 PST
Created attachment 388077 [details] Patch for landing
WebKit Commit Bot
Comment 20 2020-01-17 14:32:03 PST
Comment on attachment 388077 [details] Patch for landing Clearing flags on attachment: 388077 Committed r254767: <https://trac.webkit.org/changeset/254767>
WebKit Commit Bot
Comment 21 2020-01-17 14:32:05 PST
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 22 2020-01-17 15:05:58 PST
Nice.
Alexey Proskuryakov
Comment 23 2020-01-25 18:41:06 PST
*** Bug 168092 has been marked as a duplicate of this bug. ***
Diego Pino
Comment 24 2022-01-02 17:10:38 PST
*** Bug 210372 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.