REGRESSION (r254483): media/track/track-cues-sorted-before-dispatch.html became very flaky https://bugs.webkit.org/show_bug.cgi?id=206225 <rdar://problem/58634315>

Reviewed by Jer Noble.

The list of text track cues that are to fire events are sorted before events are
fired. Cue were being sorted by track, then by start time, and then by end time.
This meant that the sort order of two cues in the same track with identical start
and end times was not stable, causing this test to be flaky. The spec says to sort
by a cue's position in the track cue list when start and end times are identical,
so do that.

No new tests, this fixes a flaky test.

* html/track/TextTrackCue.cpp:
(WebCore::TextTrackCue::cueIndex const):
(WebCore::TextTrackCue::isOrderedBefore const):
* html/track/TextTrackCue.h:
* html/track/TextTrackCueList.cpp:
(WebCore::cueSortsBefore):
(WebCore::TextTrackCueList::cueIndex const):
(WebCore::TextTrackCueList::add):
(WebCore::TextTrackCueList::updateCueIndex):
(WebCore::compareCues): Deleted.
* html/track/TextTrackCueList.h:


Canonical link: https://commits.webkit.org/219512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254767 268f45cc-cd09-0410-ab3c-d52691b4dbfc